# apps/auth-service/src/controllers/auth.controller.ts
@@ -1,8 +1,10 @@
 import { NextFunction, Request, Response } from "express";
 import { checkOtpRestrictions, sendOtp, tracOtpRequest, validationRegistrationData, verifyOtp } from "../utils/auth.helper";
 import prisma from "../../../../packages/libs/prisma";
-import { ValidationError } from "../../../../packages/error-handler";
+import { AuthError, ValidationError } from "../../../../packages/error-handler";
 import bcrypt from "bcryptjs";
+import jwt from "jsonwebtoken";
+import { setCookie } from "../utils/cookies/setCookie";
 
 export const userRegistration = async (req: Request, res: Response, next: NextFunction) => {
     try {
@@ -55,6 +57,46 @@ export const verifyUser = async (req: Request, res: Response, next: NextFunction
             message: "User registered successfully"
         })
     } catch (error) {
+        return next(error);
+    }
+}
+
+export const loginUser = async (req: Request, res: Response, next: NextFunction) => {
+    try {
+        const {email, password} = req.body;
+        if(!email) {
+            return next(new ValidationError("email is required"));
+        }
+        if(!password) {
+            return next(new ValidationError("password is required"));
+        }
+
+        const user = await prisma.users.findUnique({where: {email: email}});
+        if(!user) {
+            return next(new ValidationError("User not found"));
+        }
+
+        const isPasswordValid = bcrypt.compare(password, user.password!);
+        if(!isPasswordValid) {
+            return next(new AuthError("Invalid credentials"));
+        }
+
+        const accesstoken = jwt.sign({email: email}, process.env.ACCESS_TOKEN_SECRET as string, {expiresIn: "15m"});
+        const refreshToken = jwt.sign({email: email}, process.env.REFRESH_TOKEN_SECRET as string, {expiresIn: "7d"});
+
+        setCookie(res, "refresh_token", refreshToken);
+        setCookie(res, "access_token", accesstoken);
+
+        res.status(200).json({
+            message: "login successfull",
+            user: {
+                id: user.id,
+                email: user.email,
+                name: user.name
+            }
+        })
+    }
+    catch (error) {
         return next(error);
     }
 }
